# Installway

./: .gitignore  CONTRIBUTING.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
common/: Cargo.toml
common/locales/: en.toml  fr.toml  it.toml
common/src/: assoc.rs  elevation.rs  i18n.rs  lib.rs  log.rs  model.rs  models.rs  paths.rs  plugin.rs  registry.rs  shortcuts.rs  utils.rs
common/src/model/: choice_option.rs  choice_style.rs  feature_mode.rs  feature_select.rs  file_assoc.rs  file_entry.rs  install_dir_restriction.rs  install_info.rs  installer_payload.rs  launch_option.rs  manifest.rs  page_step.rs  patch_info.rs  payload_kind.rs  plugin_ctx.rs  plugin_entry.rs  plugin_page.rs  plugin_phase.rs  plugin_widget.rs  reg_entry.rs  reg_kind.rs  reg_value.rs  registry_entry.rs  registry_kind.rs  registry_value.rs  shortcut_entry.rs  signed_payload.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/building/: config.md  full.md  hintway.md  patch.md  toolchain.md
docs/src/getting-started/: build-the-builder.md  keygen.md  quickstart.md  signing-keys.md
docs/src/packaging/: associations.md  branding.md  features.md  plugins.md  registry.md  shortcuts.md  signing.md  wizard.md
docs/src/reference/: cli.md  exit-codes.md  installer-cli.md  payload.md
docs/src/running/: install.md  machine-wide.md  uninstall.md
installer/: Cargo.toml  build.rs
installer/src/: analytics.rs  elevation.rs  extract.rs  install.rs  main.rs  payload.rs  proc.rs
installer/src/ui/: helpers.rs  minimal.rs  mod.rs
installer/src/ui/win32/: banner.rs  handlers.rs  mod.rs  plugin_pages.rs  views.rs
installer_builder/: Cargo.toml  build.rs
installer_builder/src/: args.rs  banner.rs  embed.rs  features.rs  icon.rs  keys.rs  license.rs  main.rs  pack.rs  payload.rs  toolchain.rs  version.rs
scripts/: smoke-test.ps1  test-installer.ps1  test-plugin-pages.ps1
sdk/: README.md  installway_plugin.h
sdk/examples/country_picker/: Cargo.toml
sdk/examples/country_picker/src/: lib.rs
sdk/examples/feature_pack/: Cargo.toml
sdk/examples/feature_pack/src/: lib.rs
sdk/examples/rust_plugin/: Cargo.toml
sdk/examples/rust_plugin/src/: lib.rs
sdk/examples/uninstall_installshield/: Cargo.toml
sdk/examples/uninstall_installshield/src/: lib.rs
sdk/examples/uninstall_msi/: Cargo.toml
sdk/examples/uninstall_msi/.cargo/: config.toml
sdk/examples/uninstall_msi/src/: lib.rs
test/plugin-pages/: pack.toml
test/plugin-pages/src/: readme.txt
uninstaller/: Cargo.toml
uninstaller/src/: analytics.rs  cleanup.rs  main.rs  ui.rs  worker.rs
uninstaller/src/stages/: finalize.rs  uninstall.rs
