[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
hex = "0.4"
anyhow = "1.0"
walkdir = "2.5"
dirs = "5"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Security",
] }
