[package]
name = "installer"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "installer"
path = "src/main.rs"

[features]
default = []
hintway = ["dep:hintway_analytics", "dep:uuid"]

[dependencies]
common = { path = "../common" }
hintway_analytics = { git = "https://github.com/hintwayapp/Rust-SDK.git", optional = true }
uuid = { version = "1.3", features = ["v4"], optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = { version = "1.5", features = ["mmap"] }
hex = "0.4"
anyhow = "1.0"
ed25519-dalek = "2"
zip = { version = "2.2", default-features = false, features = ["deflate", "zstd"] }
hdiffpatch-rs = { git = "https://github.com/TwintailTeam/hdiffpatch-rs" }
mslnk = "0.1"
fs4 = "0.13"
memmap2 = "0.9"
rayon = "1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }

[build-dependencies]
embed-manifest = "1.4"

[dev-dependencies]
tempfile = "3"
