[package]
name = "installer_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
blake3 = "1.5"
rayon = "1.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate", "zstd"] }
hex = "0.4"
glob = "0.3"
editpe = { version = "0.2", default-features = false, features = ["std"] }
indexmap = "2"
tempfile = "3"

[build-dependencies]
embed-manifest = "1.4"
