# Example Installway plugin: activates feature packs at install time.
# It exports `installway_features`, which the host queries before staging to
# decide which feature-tagged files to install. Compiles to a cdylib DLL.
# Build:  cargo build --release   ->  target/release/feature_pack.dll
[package]
name = "feature_pack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
widestring = "1.1"

# Standalone (not part of the Installway workspace).
[workspace]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
